Bug 896287 - NVIDIA specific GLX server vendor check for pixmap depth and fbConfig depth. r=karlt